--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,11 @@
 # Sample localization file for English. Add more files in this directory for other locales.
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
-en:
-  hello: "Hello world"
+--- 
+en: 
+  activerecord: ~
+  errors: 
+    messages: 
+      blank: "El campo no puede estar vacío."
+      taken: "El campo debe ser único."
+      not_a_number: "El campo debe ser un número."
